--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- header start -->
     <header>
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class=".section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -41,11 +41,53 @@
                 <h3 class="teams-title"><span class="Quick-list">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
-
             </div>
          </section>
+            <!-- features section -->
+            <section class="features">
 
-    </main>
+            </section>
+             <!-- facts section -->
+              <section class="facts">
+                <h3 class="section-title">some facts</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="facts-card-container">
+                    <!-- .card*4>img+h2.card-starts+p.card-title -->
+                    <div class="card">
+                        <img src="images/icons/ribon.png" alt="">
+                        <h2 class="card-starts">54</h2>
+                        <p class="card-title text-light-gray">Awards Winnings</p>       
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/projects.png" alt="">
+                        <h2 class="card-starts">1458</h2>
+                        <p class="card-title text-light-gray">Project Finished</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/customers.png" alt="">
+                        <h2 class="card-starts">590</h2>
+                        <p class="card-title text-light-gray">Clients Worked</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/icons/email.png" alt="">
+                        <h2 class="card-starts">22578</h2>
+                        <p class="card-title text-light-gray">Email Send</p>
+                    </div>
+                </div>
+              </section>
+              <!-- sponsors section -->
+               <section class="sponsors">
+                <h3 class="section-title">Our Sponspors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <div class="sponsors-img-container">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                </div>
+               </section>
+        </main>
     <footer>
 
     </footer>
